[package]
name = "ziponhttp"
version = "0.1.0"
edition = "2024"

authors = ["OgGhostJelly"]
license = "MIT"
description = "Extract only what you need from zip files using HTTP range requests. Small & Minimalist."
repository = "https://github.com/OgGhostJelly/ziponhttp"
keywords = ["archive", "compression", "zip"]
categories = ["compression"]

[dependencies]
inflate = "0.4.5"
thiserror = "2.0.17"
ureq = "3.1.4"
